one more tiny little change

--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -270,7 +270,7 @@
       </label>
     </small>
   </div>
-  <div class="notice">*Evo will perform best with the default options with majority of systems</div>
+  <div class="notice">*A1Evo will perform best with the default options with majority of systems</div>
   <h2 class="log-heading">Progress log:</h2>
   <pre id="logContainer"></pre>
 </div>
