finalize option logs

--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -8796,11 +8796,11 @@ zip.file("_micCal.txt", micCal);
         console.log(`  Active target curve: ${targetCurveName}.`);
       }
       if (movieMode) {
-        console.log("  Movie mode selected - A1Evo will level and EQ aggressively to prioritize immersion.")
+        console.log("  Movie mode - A1Evo will level and EQ aggressively to prioritize immersion.")
       } else {
-        console.log("  No movie mode - A1Evo will EQ minimally to preserve the natural sound of your speakers.")
+        console.log("  Standard mode - A1Evo will EQ minimally to preserve the natural sound of your speakers.")
       }
-      console.log(`  Subwoofer polarity inversion allowed - ${noInversion ? "No" : "Yes"}.`);
+      console.log(`  Subwoofer polarity inversion allowed: ${noInversion ? "No" : "Yes"}.`);
       console.info(`****************************************************************************************************`);
     }
     async function bootUp() {
