--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -266,7 +266,7 @@
       <label>
         <input type="checkbox" id="dialogueBoost" onchange="updateCheckboxStates()">
         Dialogue boost
-        <span class="explanation">Emphasizes the vocal region of the center speaker.</span>
+        <span class="explanation">Emphasizes the vocal region of the center speaker. You must have a center speaker to use this option.</span>
       </label>
       <label>
         <input type="checkbox" id="noInversion" onchange="updateCheckboxStates()">
